Fix vip discord modal style on mobile (#310)

--- a/audius-client/packages/web/src/containers/audio-rewards-page/components/PurpleBox.module.css
+++ b/audius-client/packages/web/src/containers/audio-rewards-page/components/PurpleBox.module.css
@@ -11,6 +11,10 @@
   justify-content: space-between;
 }
 
+.mobile.container {
+  min-width: unset;
+}
+
 .label {
   font-weight: var(--font-bold);
   font-size: var(--font-m);
